--- a/style.css
+++ b/style.css
@@ -208,6 +208,9 @@ nav li:hover{
         .main{
             font-size: 30px;
         }
+        .head{
+            font-size: 25px;
+        }
     }
     @media (max-width:260px) {
         #icon{
@@ -221,6 +224,9 @@ nav li:hover{
         }
         .main{
             font-size: 22px;
+        }
+        .head{
+            font-size: 25px;
         }
     }
 }
