--- a/style.css
+++ b/style.css
@@ -197,6 +197,13 @@ nav li:hover{
         .main{
             font-size: 30px;
         }
+        #cart{
+            display: none;
+        }
+        .head{
+            font-size: 25px;
+        }
+
     }
     @media (max-width:350px) {
         #cart{
