--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@
     height: auto;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;    
+    text-align: center;
+    justify-content: space-evenly;
     flex-flow: wrap; 
     /* background-color: royalblue; */
 }
@@ -56,9 +57,6 @@
     border-top: solid rgba(0,0,0,0.1);
     box-shadow: 0px 20px 15px rgba(0,0,0,0.3);
     cursor: pointer;
-}
-.flex-container div{
-    width: 16.5%;
 }
 
 #icon{
@@ -126,10 +124,10 @@ li{
 }
 nav li:hover{
     background-color: rgba(102, 94, 94, 0.3);
+    color: rgb(0, 90, 255);
 }
-
-
 .row{
+    /* padding: 0px; */
     float:left;
     width:12vw;
     /* border:solid blue; */
@@ -141,22 +139,25 @@ nav li:hover{
     .aside1{
         order: 2;
     }
+    footer{
+        order: 4;
+    }
     .main{
         order: 1;
     }
     .flex-container{
         order: 3;
     }
-}
-@media all and (min-width:600px){
-    .aside1{
-        flex: 1;
-    }
-    .flex-container div{
-        width: 16.68%;
-    }
-    #cart{
-        display: none;
+    @media all and (min-width:600px){
+        .aside1{
+            flex: 1;
+        }
+        .flex-container div{
+            width: 16.68%;
+        }
+        #cart{
+            display: none;
+        }
     }
 }
 
@@ -191,7 +192,6 @@ nav li:hover{
         background-color: rgba(255, 228, 228, 0.822);
         top: 1px;
         text-align: center;
-
     }
     .row.show{
         display:block;
